# betl

./: .gitignore  CLAUDE.md  Cargo.toml  README.org  dyncomp.json
python/: colors.py  santander-ledger.py
src/: bank_statement.rs  banks.rs  main.rs
