[package]
name = "santander-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }
chrono = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.6.0"
dirs = "4.0.0"
clap = { version = "3.2.20", features = ["derive"] }
